# dials-rest

./: .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  environment-dev.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: build-and-push-docker-images.yml  ci.yml
src/dials_rest/: __init__.py  auth.py  main.py  settings.py
src/dials_rest/cli/: create_access_token.py
src/dials_rest/routers/: find_spots.py  image.py
tests/: conftest.py
tests/cli/: test_create_access_token.py
tests/routers/: test_find_spots.py  test_image.py
