[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools-scm"]

[project]
name = "dials-rest"
description = "A REST API to a subset of DIALS features"
readme = "README.md"
version = "0.0.1"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dateutil",
    "fastapi",
    'importlib-metadata; python_version<"3.8"',
    "python-jose",
    "uvicorn[standard]",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.scripts]
create-access-token = "dials_rest.cli.create_access_token:run"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/dials_rest/_version.py"
